[package]
name = "conlogger"
authors = ["SlenLen"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "simple logger that tells you at what times your device couldn't connect to the internet GPL-3.0-or-later"
repository = "https://github.com/slenlen/conlogger/"
license = "GPL-3.0-or-later"



[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
ping-fox = "0.1.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"
overflow-checks = false
