cargo-features = ["trim-paths"]

[package]
name = "conlogger"
authors = ["SlenLen"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "A simple connection status logger GPL-3.0-or-later"
repository = "https://github.com/slenlen/conlogger/"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }

[profile.release]
trim-paths = "all"
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"
overflow-checks = false
